benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_Compare_NormalizeBitString_iter2_error.log
=== Verification Error - Iteration 2 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_Compare_NormalizeBitString.rs
Time: 2025-09-15 19:24:10

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0282]: type annotations needed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Compare_NormalizeBitString_impl.rs:32:7
   |
32 |   let mut i = 0;
   |       ^^^^^
33 |   while i < s.len() && s.index(i as int) == '0' {
   |         - type must be known at this point
   |
help: consider giving `i` an explicit type
   |
32 |   let mut i: /* Type */ = 0;
   |            ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.

--------------------------------------------------------------------------------

Additional Output:
error[E0282]: type annotations needed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Compare_NormalizeBitString_impl.rs:32:7
   |
32 |   let mut i = 0;
   |       ^^^^^
33 |   while i < s.len() && s.index(i as int) == '0' {
   |         - type must be known at this point
   |
help: consider giving `i` an explicit type
   |
32 |   let mut i: /* Type */ = 0;
   |            ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
